--- a/news/templates/blog.html
+++ b/news/templates/blog.html
@@ -7,6 +7,7 @@
     <section id="blog-posts" class="blog-posts section">
         <div class="container">
             <div class="row gy-4">
+                <div class="text-center"> LISTA INFORMASAUN</div>
                 {% for post in posts %}
                 <div class="col-lg-4">
                     <article>
